--- a/views/AnaSayfa.ejs
+++ b/views/AnaSayfa.ejs
@@ -177,7 +177,7 @@
                 </div>
             <% } else { %>
                 <a href="/UyeGirisi">Üye Girişi</a>
-                <a href="/Uyeol">Üye Ol</a>
+                <a href="/UyeOl">Üye Ol</a>
             <% } %>
              <div>
           
