--- a/views/MacEkle.ejs
+++ b/views/MacEkle.ejs
@@ -62,11 +62,13 @@
 
   <!-- JS Kodları -->
   <script>
-    const team1 = [];
-    const team2 = [];
-    const members = ['Eren Pehlivan', 'Baran Kaya', 'Oğuzhan Kadayıf'];
-    let currentTeam = 1;
-    let mode = 'add';
+ const team1 = [];
+  const team2 = [];
+
+  const members = <%- JSON.stringify(lig.members.map(m => m.name)) %>;
+
+  let currentTeam = 1;
+  let mode = 'add';
 
     function openAddModal(team) {
       currentTeam = team;
